# commonplace

./: .gitignore  README.md  brushmap_2022_07_10.py  complex_array3d_2022_07_18.ts  complex_array3d_2022_07_18_test.ts  complex_scalar_2022_07_18.ts  complex_scalar_2022_07_18_test.ts  daily.py  daily_2022_06_16_tixy.py  daily_2022_06_30_pendulum.py  daily_2022_07_01.py  daily_2022_07_07.py  daily_2022_07_08_image.py  daily_2022_07_08_spin.py  daily_2022_07_08_spin2.py  daily_2022_07_09.py  daily_2022_07_18.ts  img.py  img_2022_07_09.py  nn_2022_07_07.py  nn_2022_07_09.py  nn_2022_07_12.py  pyproject.toml  svg_builder_2022_07_18.ts
archive_2022-06-16_2022-07-01/: daily.py
src/commonplace/: tixy.py
