[project]
name = "commonplace"
version = "0.0.1"
authors = [
  { name="Madison Brooks", email="maddie@0xmaddie.page" },
]
description = "'Commonplace' is a translation of the Latin term locus communis (from Greek tópos koinós) which means 'a general or common topic'."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pycairo",
  "numpy",
  "scipy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
